<resources>
    <string name="app_name">Pokemon Watchlist</string>
    <string name="clear_list">Clear List</string>
    <string name="clear_profile">Clear Profile</string>
    <string name="submit">Submit</string>
    <string name="pokemon_id_or_name">Pokemon ID or Name</string>
    <string name="search">Search</string>
    <string name="pokedex_id">Pokedex ID:</string>
    <string name="weight">Weight:</string>
    <string name="height">Height:</string>
    <string name="base_xp">Base XP:</string>
    <string name="move">Move:</string>
    <string name="ability">Ability:</string>
    <string name="id">ID</string>
    <string name="weightplain">Weight</string>
    <string name="heightplain">Height</string>
    <string name="xp">XP</string>
    <string name="moveplain">Move</string>
    <string name="abilityplain">Ability</string>
    <string name="name">Name</string>
    <string name="pokeimage">PokeImage</string>
</resources>