<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightblue"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/clearProfButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="5dp"
        android:text="@string/clear_profile"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/pokeList"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/clearListButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="5dp"
        android:text="@string/clear_list"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/pokeList"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonAddPokemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:text="@string/submit"
        android:backgroundTint="@color/black"
        app:layout_constraintStart_toEndOf="@+id/editTextPokemon"
        app:layout_constraintTop_toTopOf="@+id/editTextPokemon" />

    <EditText
        android:id="@+id/editTextPokemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/pokemon_id_or_name"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@+id/searchBar"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="Id or Name" />

    <TextView
        android:id="@+id/searchBar"
        android:layout_width="68dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/search"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/PokeNameText"
        android:layout_width="220dp"
        android:layout_height="43dp"
        android:layout_marginTop="40dp"
        android:text="@string/name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.657"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/pokedexIdTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="60dp"
        android:text="@string/pokedex_id"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PokeNameText" />

    <TextView
        android:id="@+id/weightTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/weight"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/pokedexIdTV"
        app:layout_constraintTop_toBottomOf="@+id/pokedexIdTV" />

    <TextView
        android:id="@+id/heightTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/height"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/weightTV"
        app:layout_constraintTop_toBottomOf="@+id/weightTV" />

    <TextView
        android:id="@+id/baseXPTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/base_xp"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/heightTV"
        app:layout_constraintTop_toBottomOf="@+id/heightTV" />

    <TextView
        android:id="@+id/moveTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/move"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/baseXPTV"
        app:layout_constraintTop_toBottomOf="@+id/baseXPTV" />

    <TextView
        android:id="@+id/abilityTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/ability"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/moveTV"
        app:layout_constraintTop_toBottomOf="@+id/moveTV" />


    <TextView
        android:id="@+id/pokedexIDText"
        android:layout_width="157dp"
        android:layout_height="24dp"
        android:layout_marginStart="104dp"
        android:text="@string/id"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textColor="@color/gray"
        app:layout_constraintStart_toEndOf="@+id/pokedexIdTV"
        app:layout_constraintTop_toTopOf="@+id/pokedexIdTV" />

    <TextView
        android:id="@+id/weightText"
        android:layout_width="157dp"
        android:layout_height="24dp"
        android:text="@string/weightplain"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textColor="@color/gray"
        app:layout_constraintStart_toStartOf="@+id/pokedexIDText"
        app:layout_constraintTop_toTopOf="@+id/weightTV" />

    <TextView
        android:id="@+id/heightText"
        android:layout_width="157dp"
        android:layout_height="24dp"
        android:text="@string/heightplain"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/pokedexIDText"
        app:layout_constraintTop_toTopOf="@+id/heightTV" />

    <TextView
        android:id="@+id/baseXPText"
        android:layout_width="157dp"
        android:layout_height="24dp"
        android:text="@string/xp"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/pokedexIDText"
        app:layout_constraintTop_toTopOf="@+id/baseXPTV" />


    <TextView
        android:id="@+id/moveText"
        android:layout_width="157dp"
        android:layout_height="24dp"
        android:text="@string/moveplain"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/pokedexIDText"
        app:layout_constraintTop_toTopOf="@+id/moveTV" />

    <TextView
        android:id="@+id/abilityText"
        android:layout_width="157dp"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/abilityplain"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/pokedexIDText"
        app:layout_constraintTop_toTopOf="@+id/abilityTV" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchBar" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="60dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/abilityText" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="160dp"
        android:layout_height="124dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/pokeimage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:srcCompat="@android:drawable/ic_menu_info_details" />


    <ListView
        android:id="@+id/pokeList"
        android:layout_width="412dp"
        android:layout_height="255dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

</androidx.constraintlayout.widget.ConstraintLayout>